# ctf-package

./: .gitignore  README.md  carla-0.10.0-cp312-cp312-win_amd64.whl  no_rendering_mode.py  pyproject.toml  websocket_client.py  websocket_test_client.py
vlib/: utils.py
vlib/core/: __init__.py  challenge.py  engine.py  sensors.py  simplesens.py  utils.py  websocket_bridge.py
